--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,3 +1,4 @@
-<p>
-  blog works!
-</p>
+<div class="blog">
+  <p class="blog-title offset-3">Welcome to the Paper Cranes Blog!</p>
+  <p class="blog-title ml-2">coming soon...</p>
+</div>
