--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -28,8 +28,7 @@
         <div class="dropdown">
           <a routerLink="/specialties">Specialties</a>
           <div class="dropdown-content">
-            <a routerLink="/specialties">CBT</a>
-            <a routerLink="/specialties">DBT</a>
+            <a routerLink="/cbt">CBT</a> <a routerLink="/specialties">DBT</a>
             <a routerLink="/specialties">Option 3</a>
           </div>
         </div>
