--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,7 @@
 .background {
-  background-image: url("https://juegosrev.com/wp-content/uploads/2017/06/White-Abstract-Wallpapers-Gallery-89-Plus-PIC-WPW405898-1.png");
+  /* background-image: url("https://juegosrev.com/wp-content/uploads/2017/06/White-Abstract-Wallpapers-Gallery-89-Plus-PIC-WPW405898-1.png"); */
+  background-image: url("https://www.color-hex.com/palettes/22926.png");
+
   height: 125%;
-  background-color: rgb(165, 192, 250);
+  /* background-color: rgb(165, 192, 250); */
 }
