--- a/src/app/resources/resources.component.css
+++ b/src/app/resources/resources.component.css
@@ -1,8 +1,8 @@
 .info {
-  font-size: 125%;
+  font-size: 110%;
   height: 250px;
-  width: 650px;
-  overflow-y: scroll;
+  width: 600px;
+  overflow-y: auto;
 }
 
 #row1 {
@@ -15,4 +15,21 @@
   display: flex;
   flex-direction: column;
   font-size: 110%;
+}
+.background {
+  background-image: url("https://www.color-hex.com/palettes/22926.png");
+  /* height: 900px; */
+  height: 200%;
+  /* background-color: rgb(165, 192, 250); */
+}
+
+.resources-quote {
+  font-family: "Abril Fatface", cursive;
+  font-size: 200%;
+  /* text-shadow: 4px 4px 4px #aaa; */
+}
+.resources-paragraph {
+  font-family: "Bree Serif", serife;
+  font-size: 200%;
+  /* text-shadow: 4px 4px 4px #aaa; */
 }
